# vox-text

./: .gitignore
.taskmaster/: config.json  state.json
.taskmaster/docs/: aws-account-prep-prd.md  sms-voice-platform-prd.md
infrastructure/: .gitignore  API-GATEWAY-DEPLOYMENT.md  API-GATEWAY-PRIVATE-GUIDE.md  API-GATEWAY-PUBLIC-GUIDE.md  CLOUDFLARE-TUNNEL-GUIDE.md  COST-OPTIMIZATION-SUMMARY.md  DEPLOYMENT-GUIDE.md  HYBRID-ARCHITECTURE-GUIDE.md  KMS-ENCRYPTION-GUIDE.md  LAMBDA-PACKAGING-GUIDE.md  NEW-STRUCTURE-GUIDE.md  OFFICIAL-TELNYX-SDK-FIX.md  PROFILE-CONFIGURATION.md  PYTHON-312-UPGRADE.md  QUICK-START-SSO.md  README.md  SIGNATURE-VALIDATION-ARCHITECTURE.md  app.py  deploy-movearound.sh  deploy-python.sh  deploy-with-boss.sh  deploy-with-packaging.sh  deploy.py  package-lock.json  test_structure.py
infrastructure/config/: __init__.py  environments.py  environments.ts  telnyx-config.ts
infrastructure/docs/: api-gateway-setup.md  custom-domain-setup.md  gitignore-checklist.md  naming-convention.md  tagging-standards.md
infrastructure/lambda/authorizer/: authorizer.py
infrastructure/lambda/fallback/: fallback.py
infrastructure/lambda/sms-handler/: index.py  requirements.txt
infrastructure/lambda/telnyx-authorizer/: README.md  index.py  pyproject.toml
infrastructure/lambda/telnyx-fallback/: README.md  index.py  pyproject.toml
infrastructure/lib/: api-gateway-construct.ts  infrastructure-stack.ts  naming-convention.ts  tagging-strategy.ts
infrastructure/policies/: README.md
infrastructure/scripts/: build-crypto-layer.sh  build-nacl-layer.sh  cleanup-logs.sh  deploy-with-custom-domain.sh  deploy.sh  destroy.sh  manual-lambda-deploy.sh  package-lambda.sh  setup-apigateway-cloudwatch.sh  setup-aws-env.sh  validate-naming.ts
infrastructure/shared-standards/: MANIFEST.in  README.md  pyproject.toml  test_cdk_integration.py
infrastructure/shared-standards/examples/: python_example.py  typescript_example.ts
infrastructure/shared-standards/m3_aws_standards/: __init__.py  constructs.py  naming.py  tagging.py
infrastructure/shared-standards/typescript/: package.json
infrastructure/shared-standards/typescript/src/: index.ts
infrastructure/stacks/: __init__.py  api_gateway_construct.py  ecs_fargate_construct.py  sms_bot_stack.py
