[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telnyx-authorizer"
version = "1.0.0"
description = "Telnyx webhook signature validation authorizer using official SDK pattern"
authors = [
    {name = "SMS Bot Team", email = "dev@movearound.co"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyNaCl>=1.5.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
